site/templates/styles/styles.css
/*==============================================================
   GENERAL STYLES
 =============================================================*/
	html { position: relative; height: 100%; }
	body { height: 100%;}

	.container.page {min-height: 100%; height: 100%; height: auto; padding-bottom:200px; margin-top: 20px;}

	.tsp-background {background: rgba(0,0,0,0.4);}

	.page-banner{height: 500px;}
	@media screen and (max-width:600px) {
		.page-banner{height: 300px;}
	}


	p {font-size: 1.125em;}

	a {
		font-weight: normal;
		color: #6600cc;
		text-decoration: none;
	}
		a:hover {
			text-decoration: none;
			color: #6600cc;
		}

/* purple underline */
.sliding-middle-out {
	display: inline-block;
	position: relative;
	padding-bottom: 3px;
}
.sliding-middle-out:after {
	content: '';
	display: block;
	margin: auto;
	height: 3px;
	width: 0px;
	background: transparent;
	transition: width .5s ease, background-color .5s ease;
}
.sliding-middle-out:hover:after {
	width: 100%;
	background: #6600cc;
}

.sliding-white {
	display: inline-block;
	position: relative;
	padding-bottom: 3px;
}
.sliding-white:after {
	content: '';
	display: block;
	margin: auto;
	height: 2px;
	width: 0px;
	background: transparent;
	transition: width .5s ease, background-color .5s ease;
}
.sliding-white:hover:after {
	width: 100%;
	background: #fff;
}

	.breadcrumb {
		padding-left: 0;
		margin-bottom: 0px;
	}

	.price {
		color: #669933 !important;
		margin-top: 20px;
		margin-bottom: 25px;
		font-weight: bold;
	}

	iframe {margin-top: 50px;}

	footer {background-color: #000033; color: #fff; padding-top: 15px;}

/*==============================================================
   NAVIGATION STYLES
 =============================================================*/
	#navbar-logo {height: 40px; margin-top: -10px;}

	.navbar a.navbar-brand:hover { background-color: transparent;}

	.logo {margin: 15px 0 10px 0;}

	.navbar .container {
		padding-left: 0px;
	}

	li.dropdown {

	}

	li.active.dropdown.open {background-color: #6600cc;}

	ul.dropdown-menu {background-color: #6600cc;}

	ul.dropdown-menu li a {
		color: #fff;
		font-size: 1.125em;
	}

	ul.dropdown-menu li a:hover {
		background-color: #6600cc !important;
		color: #fff !important;
	}

/*==============================================================
		 FEATURED PRODUCTS STYLES
=============================================================*/
.featured-products {margin-top: -27px;}
.featured-products .title {font-family: 'Montserrat', sans-serif;}
.featured-products a {font-family: 'Roboto', sans-serif;}

.featured-products p {
	color: #000;
	font-size: .9em;
}

.featured-products .price {
	font-family: 'Montserrat', sans-serif;
	color: #669933;
	font-size: 1.25em;
}

.featured-products .btn {width: 100%;}

/*==============================================================
	   NEWSLETTER SIGNUP STYLES
=============================================================*/
.newsletter-container {
	margin-top: 30px;
}

.newsletter h2 {
	font-family: 'Montserrat', sans-serif;
	color: #fff;
}

.newsletter p {
	color: #fff;
}

.newsletter button {
	width: 153px;
	height: 40px;
	font-size: 1.2em;
}

/*==============================================================
   PRINT STYLES
 =============================================================*/
	@media print {
		body {height: auto;}
		a[href]:after {
			content: none !important;
		}
		.print.col-xs-12, .print.col-sm-10 {
			width:100%;
		}
		.print-col-sm-10 {
			width:83.33333333%; display: inline-block;
		}
		.print-col-sm-2{width:16.66666667%; display: inline-block;}
		.print-col-sm-4{width:33.33333333%; display: inline-block;}
		a.text-muted, a .material-icons {color: #ecf0f1 !important;}
		.tab-pane.fade {opacity: 1; display:block;}

		.alert {margin-bottom: 0px;}

	}

#back-to-top {position: fixed; bottom: 20px; right: 20px; z-index: 12; display: none;}

/*==============================================================
   EMAIL STYLES
=============================================================*/
	.email-width {width: 300px;}

/*==============================================================
	 NAVIGATION STYLES
=============================================================*/
.products {
	list-style-type: none;
}

.products a {
	font-family: 'Montserrat', sans-serif;
}

/*==============================================================
	 PAINT CATEGORY STYLES
=============================================================*/
.paint-category-title {
	padding-top: 40px;
	height: 150px;
	width: 150px;
	text-align: center;
	-webkit-transition: border .25s ease-in;
    -moz-transition: border .25s ease-in;
    -ms-transition: border .25s ease-in;
    -o-transition: border .25s ease-in;
	border: 20px solid;
}
.paint-category-title:hover {
	-webkit-transition: border .25s ease-out;
    -moz-transition: border .25s ease-out;
    -ms-transition: border .25s ease-out;
    -o-transition: border .25s ease-out;
     border: 35px solid;
	 padding-top: 30px;
	 font-style: normal;
}

@media only screen and (max-width: 991px) {
	.paint-category-title {
		width: 100%;
	}
}


/*==============================================================
	 PRODUCT CONTAINER STYLES
=============================================================*/
.product-container h1 {
	margin-bottom: 23px;
	font-family: 'Montserrat', sans-serif;
}

.description {display: block;}

.product-container a {
	font-family: 'Montserrat', sans-serif;
	text-decoration: none;
	color: #6600cc;
}

.product-container .blue {
	color: #3366ff;
}

.product-container h3 {
	margin-top: 0;
	margin-bottom: 20px;
}

.product-container .star {
	margin-top: 20px;
}

.product-container .fa-star, .product-container .fa-star-o {
	color: #ff9933;
	margin-bottom: 10px;
	font-size: 1.75em;
}

.product-container .price {
	margin-top: 20px;
	text-align: right;
}

.product-container .quantity-group {
	float: left;
}

.product-container label {
	font-weight: normal;
	font-size: 1.125em;
	margin-top: 0px;
}

.product-container .quantity {margin-left: 25px;}

.product-container .add_to_cart {
	margin-top: 15px;
	margin-bottom: 30px;
	width: 100%;
	height: 45px;
	font-size: 1.3em;
}

.product-img {
	width: 100%;
	margin-bottom: 15px;
}

.bedroom {width: 100%;}

.bedroom-color {flex: 1;}

.product-name {font-weight: bold;}

@media only screen and (max-width: 767px) {
	.bedroom-container {
		display: none;
	}
}

/*==============================================================
	 RELATED PRODUCTS STYLES
=============================================================*/
.related-products {margin-top: 50px;}

.related-products .btn {width: 100%;}

/*==============================================================
	 BLOG POST STYLES
=============================================================*/
.blog-post.h1 {margin-bottom: 15px;}

.blog-post.img {margin-bottom: 20px;}

.blog-post.h4 {margin-bottom: 12px;}

.next {margin-top: 50px;}

.prev-post {width: 130px}

.next-post {
	float: right;
	width: 130px;
}

.panels img {
	padding-top: 20px;
	padding-bottom: 20px;
}

/*==============================================================
	 CART STYLES
=============================================================*/
.title-divider {display: none;}

hr {
	margin: 0;
	margin-bottom: 10px;
	margin-top: 10px;
}

.btn-form form {float: right;}

.form-control.auto-width {
	width: auto;
	display: inline-block;
}

@media only screen and (max-width: 991px) {
	.title-divider {display: block;}

	.column-labels {display: none;}

	.label-divider {display: none;}

	.product-price {float: left;}

	.product-quantity {float: left;}

	.product-total {text-align: right;}

	.btn-form {margin-top: 20px;}
}


/*==============================================================
	 PAYMENT BAR STYLES
=============================================================*/
.step {
	height: 100px;
	display: inline-block;
	background-color: #6600cc;
	color: #fff;
}

.steps {
	margin-top: 30px;
	margin-bottom: 180px;
}

.active {background-color: #3366ff;}

.icons {margin-top: 20px;}

.step p {
	text-align: center;
	color: #fff;
}

/*==============================================================
	 REVIEWPAGE STYLES
=============================================================*/
.divider {
	height: 40px;
	background-color: #3366ff;
	margin-bottom: 30px;
}

.divider h4 {
	color: #fff;
	font-family: 'Roboto', sans-serif;
	padding-left: 10px;
	padding-top: 10px;
}

.review .form-group {margin-bottom: 0;}

.review-btn {
	margin-bottom: 30px;
	margin-top: 20px;
}

/*==============================================================
	 FOOTER STYLES
=============================================================*/
footer {
	background-color: #000;
	color: #fff;
	bottom: 0;
	width: 100%;
	flex: 1;
}

footer p {
	margin-top: 20px;
}

footer h4 {
	color: #fff;
	font-family: 'Roboto', sans-serif;
}

#hours {
	margin-top: 0;
}

footer ul {
	padding-left: 0;
	list-style-type: none;
}

footer a {
	color: #ba8bef;
	font-size: 1.125em;
}

footer .bottom {margin-bottom: 15px;}

